@@ -5,20 +5,20 @@
 
     <parent>
         <groupId>com.backbase.buildingblocks</groupId>
-        <version>13.4.0</version>
+        <version>15.2.0</version>
         <artifactId>service-sdk-starter-core</artifactId>
         <relativePath />
     </parent>
 
     <groupId>net.trexis.experts</groupId>
     <artifactId>payment-order-integration-service</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Trexis :: Backbase :: Payment Order Integration Service</name>
 
     <properties>
         <!-- GENERAL PROJECT SETTINGS -->
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
@@ -28,13 +28,16 @@
         <jsr305.version>3.0.2</jsr305.version>
         <spec.dependencies.path>${project.build.directory}/dependencies</spec.dependencies.path>
 
+        <!-- treXis -->
+        <trexis-bom.version>1.1.0-SNAPSHOT</trexis-bom.version>
+
         <!-- BACKBASE -->
-        <dbs.version>2022.01-LTS</dbs.version>
-        <service-sdk-starter-core.version>13.4.0</service-sdk-starter-core.version>
-        <payment-order-service.version>1.3.262.1</payment-order-service.version>
-        <boat-maven-plugin.version>0.14.4</boat-maven-plugin.version>
+        <dbs.version>2023.02.18-LTS</dbs.version>
+        <service-sdk-starter-core.version>15.2.0</service-sdk-starter-core.version>
+        <payment-order-service.version>1.3.400.1</payment-order-service.version>
+        <boat-maven-plugin.version>0.15.8</boat-maven-plugin.version>
         <ignored-lint-rules>150,219,215,218,166,136,174,235,107,171,224,143,151,129,146,147,172,145,115,132,120,134,183,154,105,104,130,118,110,153,101,176,116,M009,H002,M010,H001,M008,S005,S006,S007,M011,M0012</ignored-lint-rules>
-        <blade.version>4.20.0</blade.version>
+        <blade.version>4.21.0</blade.version>
 
         <!-- Code coverage -->
         <jacoco-maven.version>0.8.8</jacoco-maven.version>
@@ -62,7 +65,7 @@
             <dependency>
                 <groupId>net.trexis.experts</groupId>
                 <artifactId>experts-bom</artifactId>
-                <version>1.0.1.LTS-SNAPSHOT</version>
+                <version>${trexis-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -211,10 +214,10 @@
                         <phase>generate-sources</phase>
                         <configuration>
                             <inputSpec>
-                                ${basedir}/target/yaml/payment/payment-order-integration-outbound-api-v2.1.1.yaml
+                                ${basedir}/target/yaml/payment/payment-order-integration-outbound-api-v2.5.2.yaml
                             </inputSpec>
-                            <apiPackage>com.backbase.dbs.arrangement.arrangement-manager.api.client.v2</apiPackage>
-                            <modelPackage>com.backbase.dbs.arrangement.arrangement-manager.v2.model</modelPackage>
+                            <apiPackage>com.backbase.dbs.payment.payment-order-integration-outbound.api</apiPackage>
+                            <modelPackage>com.backbase.dbs.payment.payment-order-integration-outbound.model</modelPackage>
                         </configuration>
                     </execution>
                 </executions>
@@ -280,6 +283,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
